# 1024-api-key-vault-program

./: .gitignore  AUDIT_FIXES.md  CODE_AUDIT_REPORT.md  COMPLETION_SUMMARY.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT_SUCCESS.txt  DEPLOYMENT_SUMMARY.md  DEPLOYMENT_VERIFICATION.md  FINAL_DEPLOYMENT_INFO.txt  LICENSE  NEXT_STEPS.md  PROJECT_COMPLETE.md  PROJECT_STATUS.md  QUICKSTART.md  README.md  SUMMARY.txt  TEST_RESULTS.md
docs/: DEPLOYMENT_GUIDE.md  DEVELOPMENT_PROGRESS.md  INTEGRATION_GUIDE.md  README.md  design.md  draft.md
programs/vault/: Cargo.toml
programs/vault/src/: error.rs  instruction.rs  lib.rs  processor.rs  state.rs  utils.rs
scripts/: config.json  deploy-keypair-v2.json  deploy.sh  initialize-cli.ts  initialize.sh  package.json  test-vault.ts  verify.sh
tests/: vault_basic_flow.rs
