[package]
name = "vault-program"
version = "0.1.0"
description = "1024 API Key Vault Program - Non-custodial vault with multi-API-key authorization"
authors = ["Chuci Qin <xavierqinn@gmail.com>"]
repository = "https://github.com/1024-org/1024-api-key-vault-program"
license = "MIT"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
solana-program = "=1.18.26"
spl-token = { version = "=4.0.0", features = ["no-entrypoint"] }
borsh = "0.10"
thiserror = "1.0"
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
solana-program-test = "=1.18.26"
solana-sdk = "=1.18.26"
spl-associated-token-account = "=2.3.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
overflow-checks = true

[profile.release.build-override]
opt-level = 3

[features]
no-entrypoint = []

